# iscore-addon-metabots

./: CMakeLists.txt  LICENSE  iscore_addon_metabots.cpp  iscore_addon_metabots.hpp
Metabots/Device/: Device.cpp  Device.hpp
Metabots/Protocol/: Protocol.cpp  Protocol.hpp
